[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/UI/Items Tab.png" type="Texture" id=1]
[ext_resource path="res://Fonts/at01.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/Coin.png" type="Texture" id=3]
[ext_resource path="res://Scripts/CoinsTab.gd" type="Script" id=4]
[ext_resource path="res://Art/Hammer.png" type="Texture" id=5]
[ext_resource path="res://Art/Bomb.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "slide_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 175, -31.682 ), Vector2( 175, 0 ) ]
}

[node name="ItemsTab" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 226.441
margin_top = -73.8582
margin_right = 346.441
margin_bottom = -53.8582
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.52588e-05
margin_bottom = -1.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsContainer" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 8.0
margin_right = 38.0
margin_bottom = 19.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/CoinsContainer"]
margin_top = 3.0
margin_right = 15.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "000"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/HBoxContainer/CoinsContainer"]
margin_left = 16.0
margin_right = 30.0
margin_bottom = 19.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="BombsContainer" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 50.0
margin_right = 75.0
margin_bottom = 19.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/BombsContainer"]
margin_top = 3.0
margin_right = 10.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/HBoxContainer/BombsContainer"]
margin_left = 11.0
margin_right = 25.0
margin_bottom = 19.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="HammersContainer" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 87.0
margin_right = 112.0
margin_bottom = 19.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/HammersContainer"]
margin_top = 3.0
margin_right = 10.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/HBoxContainer/HammersContainer"]
margin_left = 11.0
margin_right = 25.0
margin_bottom = 19.0
texture = ExtResource( 5 )
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 2 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
